vertex slide is broken when using shortcut double GG with face projection snap #109633

Closed
opened 2023-07-03 05:34:00 +02:00 by Massimiliano Puliero · 3 comments
First-time contributor

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 528.49

Blender Version
Broken: version: 3.6.0, branch: blender-v3.6-release, commit date: 2023-06-27 08:08, hash: c7fc78b81ecb
Worked: 3.5

Short description of error
vertex slide is broken when using shortcut double GG with face projection snap.

Exact steps for others to reproduce the error

  • open the file,
  • press double GG to activate the vertex slide to reproduce the issue.

It works correctly with edge and vertex slide from the menu tho.

Thank you
Max

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 528.49 **Blender Version** Broken: version: 3.6.0, branch: blender-v3.6-release, commit date: 2023-06-27 08:08, hash: `c7fc78b81ecb` Worked: 3.5 **Short description of error** vertex slide is broken when using shortcut double GG with face projection snap. <video src="/attachments/aae01cbf-020f-443b-b074-9f087345a021" title="slide3.5.mkv" controls></video> <video src="/attachments/8071b9c8-2881-4545-98c0-6eff1c36a32f" title=" slide3.6.mkv" controls></video> **Exact steps for others to reproduce the error** - open the file, - press double GG to activate the vertex slide to reproduce the issue. It works correctly with edge and vertex slide from the menu tho. Thank you Max
Massimiliano Puliero added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-07-03 05:34:00 +02:00
Member

Can confirm.

@mano-wii : can you check?

Can confirm. @mano-wii : can you check?
Philipp Oeser added
Module
Modeling
Status
Confirmed
Priority
High
and removed
Status
Needs Triage
Priority
Normal
labels 2023-07-03 09:30:46 +02:00
Philipp Oeser added this to the 3.6 LTS milestone 2023-07-03 12:43:59 +02:00

The previous behavior was not correct. Edge Slide does not support individual projection. But the Project Individual Elements option was affecting the result in an unpredictable and incorrect way.

The new behavior is more correct, as it disables any individual projection effects and restores Snap To Face.

But we can see that Snap To Face is not really ideal in this case.

We have some solutions:

  • Disable Snap To Face for Vert Slide and Edge Slide if Project Individual Elements is enabled.
  • Support Project Individual Elements for Vert Slide and Edge Slide.
  • Make Snap To Face not intersect with the face normal plane in Edge Slide mode.
The previous behavior was not correct. Edge Slide does not support individual projection. But the `Project Individual Elements` option was affecting the result in an unpredictable and incorrect way. The new behavior is more correct, as it disables any individual projection effects and restores `Snap To Face`. But we can see that `Snap To Face` is not really ideal in this case. We have some solutions: - Disable `Snap To Face` for `Vert Slide` and `Edge Slide` if `Project Individual Elements` is enabled. - Support `Project Individual Elements` for `Vert Slide` and `Edge Slide`. - Make `Snap To Face` not intersect with the face normal plane in `Edge Slide` mode.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-07-03 17:46:15 +02:00

I've committed a fix to main (Support Project Individual Elements for Vert Slide and Edge Slide) and added the commit to the list to be back-ported to 3.6.
Blender LTS: Maintenance Task 3.6

I've committed a fix to main (Support Project Individual Elements for Vert Slide and Edge Slide) and added the commit to the list to be back-ported to 3.6. [Blender LTS: Maintenance Task 3.6](https://projects.blender.org/blender/blender/issues/109399)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#109633
No description provided.