source/blender/blenloader/intern/versioning_400.cc
@@ -233,6 +233,7 @@ void blo_do_versions_400(FileData *fd, Library * /*lib*/, Main *bmain)
 
 #define SCE_SNAP_PROJECT (1 << 3)
       if (ts->snap_flag & SCE_SNAP_PROJECT) {
+        ts->snap_mode &= ~SCE_SNAP_TO_FACE;
         ts->snap_mode |= SCE_SNAP_INDIVIDUAL_PROJECT;
       }
 #undef SCE_SNAP_PROJECT
